Changelog
=========


1.0.1 (unreleased)
------------------

- Implement ftw.mobile button.
  [mathias.leimgruber]


1.0.0 (2016-04-14)
------------------

- Add browserlayer.
  [mathias.leimgruber]

- Initial implementation
  [jone]