@@ -2,3 +2,7 @@ from zope.i18nmessageid import MessageFactory
 
 
 _ = MessageFactory('ftw.servicenavigation')
+
+
+def initialize(context):
+    pass
