@@ -1,12 +1,14 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:theme="http://namespaces.zope.org/ftw.theming"
     i18n_domain="ftw.servicenavigation">
 
     <i18n:registerTranslations directory="locales"/>
+    <five:registerPackage package="." initialize=".initialize" />
 
     <include file="profiles.zcml"/>
     <include file="lawgiver.zcml" zcml:condition="installed ftw.lawgiver" />
