@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry" autogroup="False">
+
+    <javascript id="++resource++servicenavigation/js/service-edit-form.js" remove="True"/>
+
+</object>
