@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<rolemap>
+    <permissions>
+
+        <permission name="ftw.servicenavigation: Modify Service Navigation" acquire="True">
+        </permission>
+
+    </permissions>
+</rolemap>
