@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object>
+    <order manager="plone.portaltop" skinname="*">
+        <viewlet name="ftw.servicenavigation.service_navigation" remove="True"/>
+    </order>
+</object>
