@@ -1,0 +1,12 @@
+from ftw.testing.genericsetup import GenericSetupUninstallMixin
+from ftw.testing.genericsetup import apply_generic_setup_layer
+from unittest2 import TestCase
+
+
+@apply_generic_setup_layer
+class TestGenericSetupUninstall(TestCase, GenericSetupUninstallMixin):
+    package = 'ftw.servicenavigation'
+
+    skip_files = (
+        'viewlets.xml',  # "plone.portaltop" manager appears in diff..
+    )
